Fix sub-sub-menu problem in high contrast theme
The "toolbar hover safe area" feature broke the workaround.

--- a/res/ui/themes/high-contrast.css
+++ b/res/ui/themes/high-contrast.css
@@ -44,8 +44,8 @@
 :root[theme=high-contrast] body>.content{
     height: calc( 100vh - 29.5px)
 }
-:root[theme=high-contrast] #toolbar .menuitem .dropdown .dropdown{
-    left:-2px
+:root[theme=high-contrast] #toolbar .menuitem .dropdown .dropdown-container{
+    left: calc( 0px - var(--toolbar-hover-safe-area) - 2px );
 }
 
 :root[theme=high-contrast] .tooltip .tooltiptext::after {
